Updates to top-affix to re-establish spacing between #content and spacer element.  Also added z-index to .affix-bottom class to keep affix on top even after reaching offset_bottom.  Added spacing between #content and footer elements in general.  Changes to styles for extra small viewports to resize brand logo on viewports smaller than 400px to preserve single-line appearance.

--- a/top-affix.html
+++ b/top-affix.html
@@ -176,11 +176,12 @@
                 </div>  
             </div><!-- end of row -->
         </div><!-- end of container -->
-
+        <br class="clearfix" />
         <div class="container">
             <div class="jumbotron">
                 <p class="h1">Spacer</p>
                 <p>The Affix Navigation element should not come down into this element.</p>
+                <p>&nbsp;</p>
                 <p>&nbsp;</p>
             </div>
         </div>
