--- a/one-column.html
+++ b/one-column.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Example Layout for Bootstrap/NMSU Brand Development, One Column">
         <meta name="author" content="Brendan Shaughnessy">
-        <link rel="icon" href="/favicon.ico">
+        <link rel="icon" href="assets/images/favicon.ico">
         <title>Bootstrapped Template, 1-Column No Hero | New Mexico State University - All About Discovery!</title>
 
         <!-- Bootstrap core CSS -->
@@ -32,12 +32,12 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-8">
                         <div class="h1 row">
-                            <div class="col-sm-2 col-xs-3">
+                            <div class="col-xs-3">
                                 <a href="//nmsu.edu">
-                                    <img id="logo" src="images/nmsu-logo-only.png" alt="NMSU logo" title="NMSU Home" class="img-responsive">
+                                    <img id="logo" src="images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
                                 </a>
                             </div>
-                            <div class="col-sm-10 col-xs-9">
+                            <div class="col-xs-9">
                                 <a href="//nmsu.edu">
                                     <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
@@ -90,7 +90,15 @@
                         <li><a href="hero-slideshow.html">Hero Slideshow</a></li>
                         <li><a href="top-affix.html">Top Affix</a></li>
                         <li><a href="one-column.html">One Column</a></li>
-                        <li><a href="two-column-left.html">Two Column Left</a></li>
+                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Two Column Left <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="two-column-left.html">Standard</a></li>
+                                <li><a href="two-column-left-toplinks.html">Masthead Links</a></li>
+                                <li><a href="two-column-left-hero-2.html">Second Level Hero</a></li>
+                                <li><a href="two-column-left-footer.html">3-Column Footer</a></li>
+                                <li><a href="two-column-left-footer-grey.html">Grey Footer</a></li>
+                            </ul>
+                        </li>
                         <li><a href="two-column-right.html">Two Column Right</a></li>
                         <li><a href="three-column.html">Three Column</a></li>
                     </ul>
