--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Empty page for Bootstrap/NMSU Brand Development">
         <meta name="author" content="Brendan Shaughnessy">
-        <link rel="icon" href="/favicon.ico">
+        <link rel="icon" href="assets/images/favicon.ico">
         <title>Bootstrapped Template | New Mexico State University - All About Discovery!</title>
 
         <!-- Bootstrap core CSS -->
@@ -32,13 +32,13 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-8">
                         <div class="h1 row">
-                            <div class="col-sm-2 col-xs-3">
-                                <a href="/">
-                                    <img id="logo" src="images/nmsu-logo-only.png" alt="NMSU logo" title="NMSU Home" class="img-responsive">
+                            <div class="col-xs-3">
+                                <a href="//nmsu.edu">
+                                    <img id="logo" src="images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
                                 </a>
                             </div>
-                            <div class="col-sm-10 col-xs-9">
-                                <a href="/">
+                            <div class="col-xs-9">
+                                <a href="//nmsu.edu">
                                     <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
                                 <!-- Uncomment for Unit-level Site
