--- a/two-column-left.html
+++ b/two-column-left.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Example Layout for Bootstrap/NMSU Brand Development, Two Columns, Sidebar Left">
         <meta name="author" content="Brendan Shaughnessy">
-        <link rel="icon" href="/favicon.ico">
+        <link rel="icon" href="assets/images/favicon.ico">
         <title>Bootstrapped Template, 2-Column Left  | New Mexico State University - All About Discovery!</title>
 
         <!-- Bootstrap core CSS -->
@@ -32,12 +32,12 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-8">
                         <div class="h1 row">
-                            <div class="col-sm-2 col-xs-3">
+                            <div class="col-xs-3">
                                 <a href="//nmsu.edu">
-                                    <img id="logo" src="images/nmsu-logo-only.png" alt="NMSU logo" title="NMSU Home" class="img-responsive">
+                                    <img id="logo" src="images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
                                 </a>
                             </div>
-                            <div class="col-sm-10 col-xs-9">
+                            <div class="col-xs-9">
                                 <a href="//nmsu.edu">
                                     <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
@@ -90,7 +90,15 @@
                         <li><a href="hero-slideshow.html">Hero Slideshow</a></li>
                         <li><a href="top-affix.html">Top Affix</a></li>
                         <li><a href="one-column.html">One Column</a></li>
-                        <li><a href="two-column-left.html">Two Column Left</a></li>
+                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Two Column Left <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="two-column-left.html">Standard</a></li>
+                                <li><a href="two-column-left-toplinks.html">Masthead Links</a></li>
+                                <li><a href="two-column-left-hero-2.html">Second Level Hero</a></li>
+                                <li><a href="two-column-left-footer.html">3-Column Footer</a></li>
+                                <li><a href="two-column-left-footer-grey.html">Grey Footer</a></li>
+                            </ul>
+                        </li>
                         <li><a href="two-column-right.html">Two Column Right</a></li>
                         <li><a href="three-column.html">Three Column</a></li>
                     </ul>
@@ -110,15 +118,7 @@
                 </ol>
             </nav>
             <div class="row">
-                <aside id="sidebar" class="col-sm-3">
-                    <h2>Left Sidebar</h2>
-                    <ul class="nav"> 
-                        <li class="active"><a href="#lorem">Lorem</a></li>
-                        <li class="active"><a href="#ipsum">Ipsum</a></li>
-                    </ul>
-                </aside><!-- end of sidebar -->
-                
-                <div id="content" class="col-sm-9" role="main">
+                <div id="content" class="col-sm-9 col-sm-push-3" role="main">
                     <h1>Layout Example <small>Two-Column with Left Sidebar</small></h1>
                     <article id="lorem">
                         <h2>Article 1</h2>
@@ -131,7 +131,20 @@
                         <p>Donec sit amet tristique augue. Fusce cursus sodales rhoncus. Aliquam non libero cursus, tempus odio in, placerat tellus. In non ultrices mauris, eu tincidunt mi. Donec feugiat lorem at arcu tristique, nec malesuada nunc euismod. Pellentesque sed tortor non libero malesuada scelerisque. Cras a odio aliquet, volutpat neque ac, sodales ipsum. Nam orci libero, bibendum id sem sit amet, gravida vestibulum orci. Sed consequat id velit sed ultrices. Vivamus luctus sollicitudin vehicula. Curabitur nibh arcu, congue sed ligula eu, tincidunt tincidunt nisl. Praesent in hendrerit arcu. Maecenas nec sem lobortis purus imperdiet vehicula sed sit amet metus. Vivamus leo lacus, dignissim sed ligula at, mollis pulvinar velit. Curabitur vitae sem imperdiet, pharetra felis ac, molestie felis.</p>
                         <p>Vestibulum pulvinar pretium augue, non aliquet urna commodo ut. In dictum a orci in mattis. Quisque eget ornare nisi. Nulla eget viverra dui. Proin non tortor tristique, bibendum justo vel, condimentum mauris. Morbi pretium massa sit amet elementum consequat. Suspendisse tristique orci eu lobortis tincidunt. Duis malesuada sollicitudin lorem ac iaculis.</p>
                     </article>
-                </div>  
+                </div>
+                
+                <aside id="sidebar" class="sidebar col-sm-3 col-sm-pull-9"> <!-- sidebar content is assumed to be supplemental and so written to render after main content outside of styling -->
+                    <h2>Left Sidebar</h2>
+                    <nav role="navigation">
+                        <ul class="nav"> 
+                            <li><a href="two-column-left.html">Standard</a></li>
+                            <li><a href="two-column-left-toplinks.html">Masthead Links</a></li>
+                            <li><a href="two-column-left-hero-2.html">Second Level Hero</a></li>
+                            <li><a href="two-column-left-footer.html">3-Column Footer</a></li>
+                            <li><a href="two-column-left-footer-grey.html">Grey Footer</a></li>
+                        </ul>
+                    </nav>
+                </aside><!-- end of sidebar -->
             </div><!-- end of row -->
         </div><!-- end of container -->
 
