--- a/features.html
+++ b/features.html
@@ -52,12 +52,12 @@
                         <div class="h1 row">
                             <div class="col-xs-3">
                                 <a href="//nmsu.edu">
-                                    <img id="logo" src="images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
+                                    <img id="logo" src="assets/images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
                                 </a>
                             </div>
                             <div class="col-xs-9">
                                 <a href="//nmsu.edu">
-                                    <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
+                                    <img id="logo_tagline" src="assets/images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
                                 <a href="/"> 
                                     <small>Department Name</small>
@@ -72,7 +72,7 @@
             </div>
         </header>
         <div class="hidden-xs pull-right" id="mosaic-low">
-            <img id="color-bars" src="images/mosaic2.png" alt="NMSU Branding">
+            <img id="color-bars" src="assets/images/mosaic2.png" alt="NMSU Branding">
         </div>
 
         <!-- Site Nav -->
@@ -85,7 +85,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="images/logo-mobile-white.png" alt="NMSU Logo"/></a>
+                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="assets/images/logo-mobile-white.png" alt="NMSU Logo"/></a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
                     <div id="search-stack"> 
@@ -179,7 +179,7 @@
                     &lt;span class="icon-bar"&gt;&lt;/span&gt;
                 &lt;/button&gt;
                 &lt;a href="//nmsu.edu" class="navbar-brand visible-xs"&gt;
-                    &lt;img src="images/logo-mobile-white.png" alt="NMSU Logo"/&gt;
+                    &lt;img src="assets/images/logo-mobile-white.png" alt="NMSU Logo"/&gt;
                 &lt;/a&gt;
             &lt;/div&gt;
             &lt;div class="collapse navbar-collapse" id="main-navigation-options"&gt;
