--- a/two-column-left-footer-grey.html
+++ b/two-column-left-footer-grey.html
@@ -34,12 +34,12 @@
                         <div class="h1 row">
                             <div class="col-xs-3">
                                 <a href="//nmsu.edu">
-                                    <img id="logo" src="images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
+                                    <img id="logo" src="assets/images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
                                 </a>
                             </div>
                             <div class="col-xs-9">
                                 <a href="//nmsu.edu">
-                                    <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
+                                    <img id="logo_tagline" src="assets/images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
                                 <a href="#">
                                     <small>Brand Identity Program</small>
@@ -54,7 +54,7 @@
             </div>
         </header>
         <div class="hidden-xs pull-right" id="mosaic-low">
-            <img id="color-bars" src="images/mosaic2.png" alt="NMSU Branding">
+            <img id="color-bars" src="assets/images/mosaic2.png" alt="NMSU Branding">
         </div>
 
         <!-- PRIMARY NAVBAR & PAGE CONTENT
@@ -68,7 +68,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="images/logo-mobile-white.png" alt="NMSU Logo"/></a>
+                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="assets/images/logo-mobile-white.png" alt="NMSU Logo"/></a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
                     <div id="search-stack" class="offset-top-10"> 
@@ -179,9 +179,9 @@
                             E-mail: <a href="mailto:ucomm@nmsu.edu">ucomm@nmsu.edu</a><br>
                         </address>
                         <ul class="list-inline">
-                            <li><a href="http://www.facebook.com/NMSUNews" target="_blank"><img src="/images/icn_facebook_32.png" alt="Facebook" title="Facebook"></a></li>
-                            <li><a href="http://www.twitter.com/nmsunews" target="_blank"><img src="/images/icn_twitter_32.png" alt="Twitter" title="Twitter"></a></li>
-                            <li><a href="http://www.youtube.com/nmsunews" target="_blank"><img src="/images/icn_youtube_32.png" alt="YouTube" title="YouTube"></a></li>
+                            <li><a href="http://www.facebook.com/NMSUNews" target="_blank"><img src="images/icn_facebook_32.png" alt="Facebook" title="Facebook"></a></li>
+                            <li><a href="http://www.twitter.com/nmsunews" target="_blank"><img src="images/icn_twitter_32.png" alt="Twitter" title="Twitter"></a></li>
+                            <li><a href="http://www.youtube.com/nmsunews" target="_blank"><img src="images/icn_youtube_32.png" alt="YouTube" title="YouTube"></a></li>
                         </ul>
                     </div>
                 </div>
