--- a/two-column-left-hero-2.html
+++ b/two-column-left-hero-2.html
@@ -37,12 +37,12 @@
                         <div class="h1 row">
                             <div class="col-xs-3">
                                 <a href="//nmsu.edu">
-                                    <img id="logo" src="images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
+                                    <img id="logo" src="assets/images/nmsu-logo-80.png" alt="NMSU logo" title="NMSU Home" class="img-responsive pull-right">
                                 </a>
                             </div>
                             <div class="col-xs-9">
                                 <a href="//nmsu.edu">
-                                    <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
+                                    <img id="logo_tagline" src="assets/images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
                                 <a href="#">
                                     <small>Brand Identity Program</small>
@@ -57,7 +57,7 @@
             </div>
         </header>
         <div class="hidden-xs pull-right" id="mosaic-low">
-            <img id="color-bars" src="images/mosaic2.png" alt="NMSU Branding">
+            <img id="color-bars" src="assets/images/mosaic2.png" alt="NMSU Branding">
         </div>
 
         <!-- PRIMARY NAVBAR & PAGE CONTENT
@@ -71,7 +71,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="images/logo-mobile-white.png" alt="NMSU Logo"/></a>
+                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="assets/images/logo-mobile-white.png" alt="NMSU Logo"/></a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
                     <div id="search-stack" class="offset-top-10"> 
