Updates to fonts and mobile navigation
Updates to fonts:
 - Replaced breadcrumb Glyphicons with a unicode chevron.
 - Extracted Glyphicons from bootstrap.nmsu.css. Now load Glyphicons
     from CDN. This addresses an issue with cross-domain references
     to font files.
 - Removed Rotis font.

Updates to mobile navigation
 - Left justified mobile navigation
 - Padded dropdown navigation inside of mobile navigation
 - Added a consistent background behind dropdowns in mobile navigation
 - Updated font color to increase contrast in dropdowns
 - Updated hover color on dropdowns to give visual feedback

--- a/two-column-left-footer-grey.html
+++ b/two-column-left-footer-grey.html
@@ -9,6 +9,8 @@
         <link rel="icon" href="assets/images/favicon.ico">
         <title>Bootstrapped Template, 2-Column Content, 3-Column Footer | New Mexico State University - All About Discovery!</title>
 
+        <!-- Bootstrap Glyphicon font and CSS -->
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
         <!-- Bootstrap core CSS -->
         <link href="assets/css/bootstrap-nmsu.min.css" rel="stylesheet" type="text/css">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
