--- a/features.html
+++ b/features.html
@@ -10,8 +10,10 @@
 
         <title>Web Development Feature Sheet | New Mexico State University - All About Discovery!</title>
 
+        <!-- Bootstrap Glyphicon font and CSS -->
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
         <!-- Bootstrap core CSS -->
-        <link href="assets/css/bootstrap-nmsu.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/bootstrap-no-glyph.min.css" rel="stylesheet" type="text/css">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
