--- a/two-column-left-footer.html
+++ b/two-column-left-footer.html
@@ -9,6 +9,8 @@
         <link rel="icon" href="assets/images/favicon.ico">
         <title>Bootstrapped Template, 2-Column Content, 3-Column Footer | New Mexico State University - All About Discovery!</title>
 
+        <!-- Bootstrap Glyphicon font and CSS -->
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
         <!-- Bootstrap core CSS -->
         <link href="assets/css/bootstrap-nmsu.min.css" rel="stylesheet" type="text/css">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
